Updated release and version display.

--- a/framework/includes/fragment-pagebegin.html
+++ b/framework/includes/fragment-pagebegin.html
@@ -40,7 +40,7 @@
       <div class="container">  <!-- container -->
         <a id="logo" no-external="true" href="http://hl7.org/fhir"><img alt="logo fhir" src="assets/images/fhir-logo-www.png"/> </a>
         <div id="hl7-status">
-          <b>{{site.data.fhir.ig.name}}</b> Implementation Guide v{{site.data.fhir.ig.version}}: STU1 Ballot 
+          <b>{{site.data.fhir.ig.name}}</b> Implementation Guide version {{site.data.fhir.ig.version}}: Release 1 Comment 1 Ballot 
         </div>
     
         <div id="hl7-nav">
