Update to latest framework version.

--- a/framework/assets/css/project.css
+++ b/framework/assets/css/project.css
@@ -115,6 +115,12 @@ body {
 #logo img {
   max-width: 100%;
 }
+#fhir-nav {
+  line-height: 50px;
+  float: right;
+  margin-top: 16px;
+  color: #808080;
+}
 #hl7-nav {
   line-height: 50px;
   float: right;
@@ -129,6 +135,8 @@ body {
   float: left;
   margin-top: 16px;
   color: maroon;
+  text-align: center;
+  width: 50%;
 }
 #hl7-search {
   line-height: 50px;
@@ -154,6 +162,11 @@ body {
 }
 #notes a {
   color: #555555;
+}
+#publish-box {
+  background-color: yellow;
+  border: 1px solid maroon;
+  padding: 5px;
 }
 /* GENERIC OBJECTS
 ----------------------------------------------------------------------------------------*/
