--- a/framework/includes/fragment-pageend.html
+++ b/framework/includes/fragment-pageend.html
@@ -33,12 +33,12 @@
     <div class="container">  <!-- container -->
       <div class="inner-wrapper">
         <p>
-          Implementation Guide &#169; {{site.data.info.copyrightyear}} {{site.data.fhir.ig.publisher}}. Based on FHIR version <a style="color: #81BEF7" href="{{site.data.fhir.path}}">({{site.data.fhir.version}}</a>).  IG generated on {{site.data.fhir.genDate}}.
+          IG &#169; {{site.data.info.copyrightyear}} <a style="color: #81BEF7" href="{{site.data.fhir.ig.contact[0].telecom[0]}}"/>{{site.data.fhir.ig.publisher}}</a>.  Package {{site.data.fhir.packageId}}#{{site.data.fhir.igVer}} based on <a style="color: #81BEF7" href="{{site.data.fhir.path}}">FHIR {{site.data.fhir.version}}</a>. Generated <span title="{{site.data.fhir.genDate}}">{{site.data.fhir.genDate | date: "%Y-%m-%d"}}</span>
           <br/>
           <span style="color: #FFFF77">
           Links: <a style="color: #81BEF7" href="{{site.data.info.assets}}toc.html">Table of Contents</a> |
                  <a style="color: #81BEF7" href="qa.html">QA Report</a> |
-                 <a style="color: #81BEF7" href="{{site.data.fhir.canonical}}/history.html">Version History</a> |
+                 <a style="color: #81BEF7" target="_blank" href="{{site.data.fhir.canonical}}/history.html">Version History <img alt="external" style="text-align: baseline" src="external.png"/></a></a> |
                  <a style="color: #81BEF7" rel="license" href="{{site.data.fhir.path}}license.html"><img style="border-style: none;" alt="CC0" src="cc0.png"/></a> |
                  <!--<a style="color: #81BEF7" href="todo.html">Search</a> | --> 
                  <a style="color: #81BEF7" target="_blank" href="http://gforge.hl7.org/gf/project/fhir/tracker/?action=TrackerItemAdd&amp;tracker_id=677">Propose a change <img alt="external" style="text-align: baseline" src="external.png"/></a>
