Resize the HL7 logo to the correct width in the header.

--- a/framework/includes/fragment-pagebegin.html
+++ b/framework/includes/fragment-pagebegin.html
@@ -51,7 +51,7 @@
           <a id="fhir-logo" no-external="true" href="http://hl7.org/fhir">
             <img alt="visit the fhir website" src="{{site.data.info.assets}}assets/images/fhir-logo-www.png"/>
           </a>
-          <a id="hl7-logo" no-external="true" href="http://www.hl7.org"><img height="50" height="91" alt="visit the hl7 website" width="42" src="{{site.data.info.assets}}assets/images/hl7-logo.png"/></a>
+          <a id="hl7-logo" no-external="true" href="http://www.hl7.org"><img height="50" width="91" alt="visit the hl7 website" src="{{site.data.info.assets}}assets/images/hl7-logo.png"/></a>
         </div>
         <div id="hl7-search"><a id="hl7-search-lnk" no-external="true" href="http://hl7.org/fhir/search.cfm"><img alt="Search FHIR" src="{{site.data.info.assets}}assets/images/search.png"/></a></div>
       </div> <!-- /container -->
